[tool.poetry]
name = "fluent"
version = "0.1.0"
description = "Builds class decorator, that wraps any method"
authors = ["Fedor Kuznetsov <dmesser@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
inspect_mate = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
